--- a/templates/Images.html
+++ b/templates/Images.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block content %}
-        <div class='imgs' style="display: flex;">
+        <div class='imgs' style="display: grid;">
                 {% for i in P %}
                         <h2>{{i}}</h2>
                         <img src={{D[i]}} height="400" width="400"><br><hr>
