--- a/templates/download.html
+++ b/templates/download.html
@@ -2,7 +2,7 @@
 {% block content %}
         <div class="Hider">
         <form action='/download' method="POST" enctype='multipart/form-data'>
-                <label> INput the File</label>
+                <label><h1> INput the File </h1></label>
                 <input type='file' name='File' class='form-control-file'>
                 <button class='btn btn-success' id='special'>Submit</button>
         
