--- a/templates/Text.html
+++ b/templates/Text.html
@@ -2,7 +2,7 @@
 {% block content %}
         <div class="POL">
                 <form action="/analyseText" method="POST">
-                        <div class="form-group input-sm">
+                        <div class="form-group">
                         <label for='inputsm'><h2>Text</h2></label>
                         <input class='form-control input-sm' name='text'/><br>
                         </div>
