--- a/templates/readData.html
+++ b/templates/readData.html
@@ -67,7 +67,7 @@
         <hr>
 
         <div class="left" style="border-color:rgb(0, 0, 0);border-width:2px;border-style:solid;">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRbAmgr9pqZRh8XhdKWxUPFBmoG2m5PKtZw2Q&usqp=CAU" height="600" width="350">
+        <img src="" height="600" width="350">
 </div>
 </div>
 </div>
