--- a/templates/yolo.html
+++ b/templates/yolo.html
@@ -3,13 +3,13 @@
 <div class="container">
         <div class="col-xs-12">
                 <form action="/qwert/{{name}}" method="POST" enctype="multipart/form-data">
-                <label> item </label>
+                <label> <h2>Item</h2> </label>
                 <input type="text" name="item" class='form-control'>
-                <label> Decription </label>
+                <label> <h2>Decription</h2> </label>
                 <input type='text' name='desc' class='form-control'>
-                <label> Price </label>
+                <label> <h2>Price</h2> </label>
                 <input type='text' name='price' class='form-control'>
-                <label> Image</label>
+                <label> <h2>Image</h2></label>
                 <input type='file' name='image'>
 
 
