--- a/templates/Gen.html
+++ b/templates/Gen.html
@@ -13,6 +13,7 @@
         <h1>Code:</h1><br>
         <h2 style="color:aquamarine" id="output">{{temp}}</h2>
         <button class="btn btn-success" onclick="copy()">Copy</button>
+        <a class='btn btn-primary' href='/staticPage'> Show Layout</a>
         </div>
         {% endif %}
         
