--- a/templates/temp.html
+++ b/templates/temp.html
@@ -1,2 +1,24 @@
-    
-<button className='btn btn-primary' onClick={this.submitData}>Submit</button>
+{% extends 'layout.html' %}{% block content %}   
+        <form>
+            <h2>Sign Up</h2>
+            <div class="form-group">
+                <label>First name</label>
+                <input type="text" class="form-control" placeholder="First name" />
+            </div>
+            <div class="form-group">
+               <label>Last name</label>
+                <input type="text" class="form-control" placeholder="Last name" />
+            </div>
+            <div class="form-group">
+               <label>Email address</label>
+               <input type="email" class="form-control" placeholder="Enter email"/>
+            </div>
+            <div class="form-group">
+               <label>Password</label>
+               <input type="password" class="form-control" placeholder="Enter password"/>
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
+            <p class="forgot-password text-right">
+               Already registered <a href="#">Sign in</a>
+            </p>
+        </form>{% endblock %}
